--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HistoryActivity"></activity>
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".HistoryActivity" android:exported="true" />
+        <activity android:name=".SettingsActivity" android:exported="true" />
     </application>
 
 </manifest>
